Mini_GO_compiler/obj/Debug/net10.0-windows/MiniGoCompilerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\ryana\Documents\Proyectos_y_varas_locas\Proyecto_Compilador_mini_GO\Mini_GO_compiler\Antlr\MiniGoCompiler.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Mini_GO_compiler.Antlr {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class MiniGoCompilerParser : Parser {
	public const int
		PACKAGE=1, VAR=2, TYPE=3, FUNC=4, STRUCT=5, APPEND=6, LEN=7, CAP=8, PRINT=9, 
		PRINTLN=10, RETURN=11, BREAK=12, CONTINUE=13, IF=14, ELSE=15, FOR=16, 
		SWITCH=17, CASE=18, DEFAULT=19, SEMI=20, ASSIGN=21, COLON=22, COLONASSIGN=23, 
		LEFTP=24, RIGHTP=25, LEFTCORCHET=26, RIGTHCORCHET=27, LEFTBRACE=28, RIGHTBRACE=29, 
		COMA=30, POINT=31, ADD=32, ADDONE=33, SUB=34, SUBONE=35, MUL=36, DIV=37, 
		MOD=38, MULX=39, DIVX=40, AMPERSAND=41, BITCLEAR=42, BITXOR=43, EQEQ=44, 
		NOTEQ=45, MORET=46, LESS=47, MOREEQ=48, LESSEQ=49, AND=50, OR=51, BITOR=52, 
		NOT=53, ADDASSIGN=54, SUBASSIGN=55, MULASSIGN=56, DIVASSIGN=57, XORASSIGN=58, 
		ORASSIGN=59, AMPERSANDASSIGN=60, MULXASSIGN=61, DIVXASSIGN=62, BITCLEARASSIGN=63, 
		MODASSIGN=64, IDENTIFIER=65, INTLITERAL=66, FLOATLITERAL=67, RAWSTRINGLITERAL=68, 
		INTERPRETEDSTRINGLITERAL=69, RUNELITERAL=70, WS=71, LINECOMMENT=72, COMMENT=73;
	public const int
		RULE_root = 0, RULE_topDeclarationList = 1, RULE_variableDecl = 2, RULE_innerVarDecls = 3, 
		RULE_singleVarDecl = 4, RULE_singleVarDeclNoExps = 5, RULE_typeDecl = 6, 
		RULE_innerTypeDecls = 7, RULE_singleTypeDecl = 8, RULE_funcDecl = 9, RULE_funcFrontDecl = 10, 
		RULE_funcArgDecls = 11, RULE_declType = 12, RULE_sliceDeclType = 13, RULE_arrayDeclType = 14, 
		RULE_structDeclType = 15, RULE_structMemDecls = 16, RULE_identifierList = 17, 
		RULE_expression = 18, RULE_expressionList = 19, RULE_primaryExpression = 20, 
		RULE_operand = 21, RULE_literal = 22, RULE_index = 23, RULE_arguments = 24, 
		RULE_selector = 25, RULE_appendExpression = 26, RULE_lengthExpression = 27, 
		RULE_capExpression = 28, RULE_statementList = 29, RULE_block = 30, RULE_statement = 31, 
		RULE_simpleStatement = 32, RULE_assignmentStatement = 33, RULE_ifStatement = 34, 
		RULE_loop = 35, RULE_switch = 36, RULE_expressionCaseClauseList = 37, 
		RULE_expressionCaseClause = 38, RULE_expressionSwitchCase = 39;
	public static readonly string[] ruleNames = {
		"root", "topDeclarationList", "variableDecl", "innerVarDecls", "singleVarDecl", 
		"singleVarDeclNoExps", "typeDecl", "innerTypeDecls", "singleTypeDecl", 
		"funcDecl", "funcFrontDecl", "funcArgDecls", "declType", "sliceDeclType", 
		"arrayDeclType", "structDeclType", "structMemDecls", "identifierList", 
		"expression", "expressionList", "primaryExpression", "operand", "literal", 
		"index", "arguments", "selector", "appendExpression", "lengthExpression", 
		"capExpression", "statementList", "block", "statement", "simpleStatement", 
		"assignmentStatement", "ifStatement", "loop", "switch", "expressionCaseClauseList", 
		"expressionCaseClause", "expressionSwitchCase"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "'var'", "'type'", "'func'", "'struct'", "'append'", 
		"'len'", "'cap'", "'print'", "'println'", "'return'", "'break'", "'continue'", 
		"'if'", "'else'", "'for'", "'switch'", "'case'", "'default'", "';'", "'='", 
		"':'", "':='", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'.'", 
		"'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'&'", 
		"'&^'", "'^'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
		"'|'", "'!'", "'+='", "'-='", "'*='", "'/='", "'^='", "'|='", "'&='", 
		"'<<='", "'>>='", "'&^='", "'%='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PACKAGE", "VAR", "TYPE", "FUNC", "STRUCT", "APPEND", "LEN", "CAP", 
		"PRINT", "PRINTLN", "RETURN", "BREAK", "CONTINUE", "IF", "ELSE", "FOR", 
		"SWITCH", "CASE", "DEFAULT", "SEMI", "ASSIGN", "COLON", "COLONASSIGN", 
		"LEFTP", "RIGHTP", "LEFTCORCHET", "RIGTHCORCHET", "LEFTBRACE", "RIGHTBRACE", 
		"COMA", "POINT", "ADD", "ADDONE", "SUB", "SUBONE", "MUL", "DIV", "MOD", 
		"MULX", "DIVX", "AMPERSAND", "BITCLEAR", "BITXOR", "EQEQ", "NOTEQ", "MORET", 
		"LESS", "MOREEQ", "LESSEQ", "AND", "OR", "BITOR", "NOT", "ADDASSIGN", 
		"SUBASSIGN", "MULASSIGN", "DIVASSIGN", "XORASSIGN", "ORASSIGN", "AMPERSANDASSIGN", 
		"MULXASSIGN", "DIVXASSIGN", "BITCLEARASSIGN", "MODASSIGN", "IDENTIFIER", 
		"INTLITERAL", "FLOATLITERAL", "RAWSTRINGLITERAL", "INTERPRETEDSTRINGLITERAL", 
		"RUNELITERAL", "WS", "LINECOMMENT", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniGoCompiler.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MiniGoCompilerParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class RootContext : ParserRuleContext {
		public ITerminalNode PACKAGE() { return GetToken(MiniGoCompilerParser.PACKAGE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(MiniGoCompilerParser.IDENTIFIER, 0); }
		public ITerminalNode SEMI() { return GetToken(MiniGoCompilerParser.SEMI, 0); }
		public TopDeclarationListContext topDeclarationList() {
			return GetRuleContext<TopDeclarationListContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(MiniGoCompilerParser.Eof, 0); }
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_root);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(PACKAGE);
			State = 81; Match(IDENTIFIER);
			State = 82; Match(SEMI);
			State = 83; topDeclarationList();
			State = 84; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopDeclarationListContext : ParserRuleContext {
		public VariableDeclContext[] variableDecl() {
			return GetRuleContexts<VariableDeclContext>();
		}
		public VariableDeclContext variableDecl(int i) {
			return GetRuleContext<VariableDeclContext>(i);
		}
		public TypeDeclContext[] typeDecl() {
			return GetRuleContexts<TypeDeclContext>();
		}
		public TypeDeclContext typeDecl(int i) {
			return GetRuleContext<TypeDeclContext>(i);
		}
		public FuncDeclContext[] funcDecl() {
			return GetRuleContexts<FuncDeclContext>();
		}
		public FuncDeclContext funcDecl(int i) {
			return GetRuleContext<FuncDeclContext>(i);
		}
		public TopDeclarationListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topDeclarationList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterTopDeclarationList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitTopDeclarationList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopDeclarationList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopDeclarationListContext topDeclarationList() {
		TopDeclarationListContext _localctx = new TopDeclarationListContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_topDeclarationList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << TYPE) | (1L << FUNC))) != 0)) {
				{
				State = 89;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case VAR:
					{
					State = 86; variableDecl();
					}
					break;
				case TYPE:
					{
					State = 87; typeDecl();
					}
					break;
				case FUNC:
					{
					State = 88; funcDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 93;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclContext : ParserRuleContext {
		public ITerminalNode VAR() { return GetToken(MiniGoCompilerParser.VAR, 0); }
		public SingleVarDeclContext singleVarDecl() {
			return GetRuleContext<SingleVarDeclContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(MiniGoCompilerParser.SEMI, 0); }
		public ITerminalNode LEFTP() { return GetToken(MiniGoCompilerParser.LEFTP, 0); }
		public InnerVarDeclsContext innerVarDecls() {
			return GetRuleContext<InnerVarDeclsContext>(0);
		}
		public ITerminalNode RIGHTP() { return GetToken(MiniGoCompilerParser.RIGHTP, 0); }
		public VariableDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterVariableDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitVariableDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclContext variableDecl() {
		VariableDeclContext _localctx = new VariableDeclContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_variableDecl);
		try {
			State = 108;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94; Match(VAR);
				State = 95; singleVarDecl();
				State = 96; Match(SEMI);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 98; Match(VAR);
				State = 99; Match(LEFTP);
				State = 100; innerVarDecls();
				State = 101; Match(RIGHTP);
				State = 102; Match(SEMI);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 104; Match(VAR);
				State = 105; Match(LEFTP);
				State = 106; Match(RIGHTP);
				State = 107; Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InnerVarDeclsContext : ParserRuleContext {
		public SingleVarDeclContext[] singleVarDecl() {
			return GetRuleContexts<SingleVarDeclContext>();
		}
		public SingleVarDeclContext singleVarDecl(int i) {
			return GetRuleContext<SingleVarDeclContext>(i);
		}
		public ITerminalNode[] SEMI() { return GetTokens(MiniGoCompilerParser.SEMI); }
		public ITerminalNode SEMI(int i) {
			return GetToken(MiniGoCompilerParser.SEMI, i);
		}
		public InnerVarDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_innerVarDecls; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterInnerVarDecls(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitInnerVarDecls(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInnerVarDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InnerVarDeclsContext innerVarDecls() {
		InnerVarDeclsContext _localctx = new InnerVarDeclsContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_innerVarDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; singleVarDecl();
			State = 111; Match(SEMI);
			State = 117;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 112; singleVarDecl();
				State = 113; Match(SEMI);
				}
				}
				State = 119;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SingleVarDeclContext : ParserRuleContext {
		public IdentifierListContext identifierList() {
			return GetRuleContext<IdentifierListContext>(0);
		}
		public DeclTypeContext declType() {
			return GetRuleContext<DeclTypeContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(MiniGoCompilerParser.ASSIGN, 0); }
		public ExpressionListContext expressionList() {
			return GetRuleContext<ExpressionListContext>(0);
		}
		public SingleVarDeclNoExpsContext singleVarDeclNoExps() {
			return GetRuleContext<SingleVarDeclNoExpsContext>(0);
		}
		public SingleVarDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleVarDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterSingleVarDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitSingleVarDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SingleVarDeclContext singleVarDecl() {
		SingleVarDeclContext _localctx = new SingleVarDeclContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_singleVarDecl);
		try {
			State = 130;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120; identifierList();
				State = 121; declType();
				State = 122; Match(ASSIGN);
				State = 123; expressionList();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125; identifierList();
				State = 126; Match(ASSIGN);
				State = 127; expressionList();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129; singleVarDeclNoExps();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SingleVarDeclNoExpsContext : ParserRuleContext {
		public IdentifierListContext identifierList() {
			return GetRuleContext<IdentifierListContext>(0);
		}
		public DeclTypeContext declType() {
			return GetRuleContext<DeclTypeContext>(0);
		}
		public SingleVarDeclNoExpsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleVarDeclNoExps; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterSingleVarDeclNoExps(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitSingleVarDeclNoExps(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleVarDeclNoExps(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SingleVarDeclNoExpsContext singleVarDeclNoExps() {
		SingleVarDeclNoExpsContext _localctx = new SingleVarDeclNoExpsContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_singleVarDeclNoExps);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132; identifierList();
			State = 133; declType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(MiniGoCompilerParser.TYPE, 0); }
		public SingleTypeDeclContext singleTypeDecl() {
			return GetRuleContext<SingleTypeDeclContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(MiniGoCompilerParser.SEMI, 0); }
		public ITerminalNode LEFTP() { return GetToken(MiniGoCompilerParser.LEFTP, 0); }
		public InnerTypeDeclsContext innerTypeDecls() {
			return GetRuleContext<InnerTypeDeclsContext>(0);
		}
		public ITerminalNode RIGHTP() { return GetToken(MiniGoCompilerParser.RIGHTP, 0); }
		public TypeDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterTypeDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitTypeDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclContext typeDecl() {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_typeDecl);
		try {
			State = 149;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 135; Match(TYPE);
				State = 136; singleTypeDecl();
				State = 137; Match(SEMI);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139; Match(TYPE);
				State = 140; Match(LEFTP);
				State = 141; innerTypeDecls();
				State = 142; Match(RIGHTP);
				State = 143; Match(SEMI);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 145; Match(TYPE);
				State = 146; Match(LEFTP);
				State = 147; Match(RIGHTP);
				State = 148; Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
